# icm20948-nucleol476rg

./: .gitignore  .mxproject  CMakeLists.txt  dmp.ioc
Core/Inc/: i2c_bus_scanner.h  main.h  message_printer.h  nucleo_icm20948_i2c_interface.h
Core/Src/: i2c.c  i2c_bus_scanner.c  main.c  message_printer.c  nucleo_icm20948_i2c_interface.c
Drivers/ICM20948/: CMakeLists.txt  icm20948.h  icm20948_driver.c  icm20948_driver.h  icm20948_errors.h  icm20948_mem.c  icm20948_mem.h  icm20948_serial_if.h  icm2098_defs.h
cmake/stm32cubemx/: CMakeLists.txt
